[project]
name = "astrbot-plugin-chat-filter"
version = "0.1.2"
description = "Chat Filter / chat detector plugin for group message filtering."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "p1930n" },
]
dependencies = []

[project.optional-dependencies]
test = []

[tool.chat-filter.tests]
runner = "unittest"
command = "python -B -m unittest discover -s . -p \"test_*.py\""
